--- a/user/Dockerfile
+++ b/user/Dockerfile
@@ -1,9 +1,10 @@
-#here we installaing depencies & copy final conent in 2nd step
-FROM node:20.19.5-alpine3.22 AS build
+FROM node:20.19.5-alpine3.21 AS build
 WORKDIR /opt/server
 COPY package.json .
 COPY *.js .
-RUN npm install
+# this may add extra cache memory
+RUN npm install 
+
 
 FROM node:20.19.5-alpine3.22
 WORKDIR /opt/server
@@ -12,10 +13,11 @@ RUN addgroup -S roboshop && adduser -S roboshop -G roboshop
     chown -R roboshop:roboshop /opt/server
 EXPOSE 8080
 LABEL com.project="roboshop" \
-        component="catalogue" \
+        component="user" \
         created_by="susmitha"
-ENV MONGO="true" \
-    MONGO_URL="mongodb://mongodb:27017/catalogue"
+ENV  MONGO="true" \
+    REDIS_URL="redis://redis:6379" \
+    MONGO_URL="mongodb://mongodb:27017/users"
 COPY --from=build /opt/server /opt/server 
 USER roboshop
 CMD ["server.js"]  
@@ -27,6 +29,7 @@ ENTRYPOIT ["node"]
 # COPY package.json .
 # COPY *.js .
 # RUN npm install
-# ENV MONGO="true" \
-#     MONGO_URL="mongodb://mongodb:27017/catalogue"
-# CMD ["node", "server.js"] 
+# ENV REDIS_HOST="redis" \
+#     CATALOGUE_HOST="catalogue" \
+#     CATALOGUE_PORT="8080"
+# CMD ["node", "server.js"]  
