--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,38 +10,38 @@ services:
   mongodb: #-- name mongodb
     build: ./mongodb
     image: nikitha84/mongodb:v1  #image push in dockerhub
-    container_namee: mongodb
+    container_name: mongodb
     volumes:
     - mongodb:/data/db #container path stord in host path
 
   redis: #-- name mongodb
     build: ./redis
     image: redis:v1  #image
-    container_namee: redis
+    container_name: redis
     volumes:
     - redis:/data
   mysql: #-- name mongodb
     build: ./mysql
     image: mysql:v1  #image
-    container_namee: mysql
+    container_name: mysql
     volumes:
     - mysql:/var/lib/mysql
   rabbitmq: #-- name mongodb
     image: rabbitmq:v1  #image
-    container_namee: rabbitmq
+    container_name: rabbitmq
     volumes:
     - rabbitmq:/var/lib/rabbitmq
     environment:
      RABBITMQ_DEFAULT_USER: roboshop
      RABBITMQ_DEFAULT_PASS: roboshop123
   user:
-  build:
-    context: ./user
-    dockerfile: Dockerfile
-    image: user:v1
-    container_name: user
-    depends_on:
-    - redis 
+    build:
+      context: ./user
+      dockerfile: Dockerfile
+      image: user:v1
+      container_name: user
+      depends_on:
+      - redis 
   cart:
     image: cart:v1
     container_name: cart
