--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
     container_name: catalogue
     depends_on:
     - mongodb  #here dependency is mongodb.so 1st mongodb will created 2nd catalogue
+
   mongodb: #-- name mongodb
     build: ./mongodb
     image: nikitha84/mongodb:v1  #image push in dockerhub
@@ -20,12 +21,14 @@ services:
     container_name: redis
     volumes:
     - redis:/data
+
   mysql: #-- name mongodb
     build: ./mysql
     image: mysql:v1  #image
     container_name: mysql
     volumes:
     - mysql:/var/lib/mysql
+
   rabbitmq: #-- name mongodb
     image: rabbitmq:v1  #image
     container_name: rabbitmq
@@ -34,6 +37,7 @@ services:
     environment:
      RABBITMQ_DEFAULT_USER: roboshop
      RABBITMQ_DEFAULT_PASS: roboshop123
+     
   user:
     build:
       context: ./user
@@ -77,7 +81,7 @@ networks:
   default: #set as roboshop n/w is default n/w
     driver: bridge
     name: roboshop
-    extranal: false #true: if u create manually n/w using docker create network roboshop cmd.now i m saying to docker compose create n/w
+    external: false #true: if u create manually n/w using docker create network roboshop cmd.now i m saying to docker compose create n/w
 volumes:
   mongodb: #docker host path
   redis:
