--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
     build:
       context: ./catalogue
       dockerfile: Dockerfile
-    image: catalogue:v1
+    image: nikitha84/catalogue:v1
     container_name: catalogue
     depends_on:
     - mongodb  #here dependency is mongodb.so 1st mongodb will created 2nd catalogue
@@ -24,7 +24,7 @@ services:
 
   mysql: #-- name mongodb
     build: ./mysql
-    image: mysql:v1  #image
+    image: nikitha84/mysql:v1  #image
     container_name: mysql
     volumes:
     - mysql:/var/lib/mysql
@@ -37,36 +37,36 @@ services:
     environment:
      RABBITMQ_DEFAULT_USER: roboshop
      RABBITMQ_DEFAULT_PASS: roboshop123
-     
+
   user:
     build:
       context: ./user
       dockerfile: Dockerfile
-    image: user:v1
+    image: nikitha84/user:v1
     container_name: user
     depends_on:
     - redis 
   cart:
-    image: cart:v1
+    image: nikitha84/cart:v1
     container_name: cart
     depends_on:
     - redis
     - catalogue
-  shipping:
-    image: shipping:v1
-    container_name: shipping
-    depends_on:
-    - mysql
-    - cart
-  payment:
-    image: payment:v1
-    container_name: payment
-    depends_on:
-    - rabbitmq
-    - cart
-    - user
+  # shipping:
+  #   image: shipping:v1
+  #   container_name: shipping
+  #   depends_on:
+  #   - mysql
+  #   - cart
+  # payment:
+  #   image: payment:v1
+  #   container_name: payment
+  #   depends_on:
+  #   - rabbitmq
+  #   - cart
+  #   - user
   frontend:
-    image: frontend:v1
+    image: nikitha84/frontend:v1
     container_name: frontend
     ports:
     - "80:80"
