--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,21 +22,21 @@ services:
     volumes:
     - redis:/data
 
-  mysql: #-- name mongodb
-    build: ./mysql
-    image: nikitha84/mysql:v1  #image
-    container_name: mysql
-    volumes:
-    - mysql:/var/lib/mysql
+  # mysql: #-- name mongodb
+  #   build: ./mysql
+  #   image: nikitha84/mysql:v1  #image
+  #   container_name: mysql
+  #   volumes:
+  #   - mysql:/var/lib/mysql
 
-  rabbitmq: #-- name mongodb
-    image: rabbitmq:v1  #image
-    container_name: rabbitmq
-    volumes:
-    - rabbitmq:/var/lib/rabbitmq
-    environment:
-     RABBITMQ_DEFAULT_USER: roboshop
-     RABBITMQ_DEFAULT_PASS: roboshop123
+  # rabbitmq: #-- name mongodb
+  #   image: rabbitmq:v1  #image
+  #   container_name: rabbitmq
+  #   volumes:
+  #   - rabbitmq:/var/lib/rabbitmq
+  #   environment:
+  #    RABBITMQ_DEFAULT_USER: roboshop
+  #    RABBITMQ_DEFAULT_PASS: roboshop123
 
   user:
     build:
