--- a/catalogue/Dockerfile
+++ b/catalogue/Dockerfile
@@ -19,7 +19,7 @@ ENV MONGO="true" \
 COPY --from=build /opt/server /opt/server 
 USER roboshop
 CMD ["server.js"]  
-ENTRYPOIT ["node"]
+ENTRYPOINT ["node"]
 
 
 # FROM node:20
