--- a/user/Dockerfile
+++ b/user/Dockerfile
@@ -21,7 +21,7 @@ ENV  MONGO="true" \
 COPY --from=build /opt/server /opt/server 
 USER roboshop
 CMD ["server.js"]  
-ENTRYPOIT ["node"]
+ENTRYPOINT ["node"]
 
 
 # FROM node:20
