--- a/user/Dockerfile
+++ b/user/Dockerfile
@@ -9,7 +9,7 @@ RUN npm install
 FROM node:20.19.5-alpine3.22
 WORKDIR /opt/server
 #now all instruction(CMD,ENV runs under non root).give roboshop user permision to /opt/server then it can acces file/folder
-RUN addgroup -S roboshop && adduser -S roboshop -G roboshop \
+RUN addgroup -S roboshop && adduser -S roboshop -G roboshop && \
     chown -R roboshop:roboshop /opt/server
 EXPOSE 8080
 LABEL com.project="roboshop" \
