--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,8 +16,7 @@ services:
     - mongodb:/data/db #container path stord in host path
 
   redis: #-- name mongodb
-  
-    image: nikitha84/redis:latest #image
+    image: redis:7 #image
     container_name: redis
     volumes:
     - redis:/data
@@ -39,26 +38,28 @@ services:
   #    RABBITMQ_DEFAULT_PASS: roboshop123
 
   user:
-    build:
-      context: ./user
-      dockerfile: Dockerfile
+    build: ./user
     image: nikitha84/user:v1
     container_name: user
     depends_on:
+    - mongodb
     - redis 
   cart:
+    build: ./cart
     image: nikitha84/cart:v1
     container_name: cart
     depends_on:
     - redis
     - catalogue
   # shipping:
+   #   build: ./shipping
   #   image: shipping:v1
   #   container_name: shipping
   #   depends_on:
   #   - mysql
   #   - cart
   # payment:
+  #   build: ./shipping
   #   image: payment:v1
   #   container_name: payment
   #   depends_on:
@@ -66,6 +67,7 @@ services:
   #   - cart
   #   - user
   frontend:
+    build: ./frontend
     image: nikitha84/frontend:v1
     container_name: frontend
     ports:
@@ -84,8 +86,8 @@ networks:
 volumes:
   mongodb: #docker host path
   redis:
-  rabbitmq:
-  mysql:
+  # rabbitmq:
+  #mysql:
 
 
 
